resume formatting fixes

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -88,15 +88,9 @@ Activities and societies: Soccer, Wolfcenter (student news show).
 ## Volunteering
 
 ### Special Olympics Florida
-**Volunteer** · 2010 – Present · 16+ yrs
+**Volunteer** · 2010 – Present
 
 ### President/Co-Founder — Project Unified Special Olympics Club, Chiles High School
 *Oct 2014 – May 2016 · 1 yr 8 mos*
 
 Civil Rights and Social Action. A club that helped students at Chiles High School with learning and physical disabilities get involved in sports and inclusion in everyday school activities.
-
----
-
-<div class="not-prose mt-12 text-sm text-gray-500 dark:text-gray-400">
-  <p><a href="/about">About</a> · <a href="https://linkedin.com/in/shaun-r-hawk-3b2ab174" target="_blank" rel="noopener">LinkedIn</a> · <a href="https://github.com/shawk08033" target="_blank" rel="noopener">GitHub</a></p>
-</div>
